--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="/public/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@400;700&family=Cairo:wght@300;400;500;600;700&family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
     <meta property="og:title" content="نظام المحاسبة الاحترافي | ERP90" />
     <meta property="og:description" content="نظام محاسبة احترافي ومتكامل لإدارة أعمالك بسهولة وكفاءة." />
     <meta property="og:type" content="website" />
@@ -30,7 +30,7 @@
     <link rel="apple-touch-icon" href="/public/logo.png" />
     <!-- تحسين SEO و Social -->
   </head>
-  <body style="font-family: 'Cairo', 'Tajawal', Arial, sans-serif; background: #f8fafc; margin: 0;">
+  <body style="font-family: 'Noto Kufi Arabic', 'Cairo', 'Tajawal', Arial, sans-serif; background: #f8fafc; margin: 0;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
