--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>نظام المحاسبة الاحترافي | ERP90</title>
+    <title>نظام   | ERP90</title>
     <meta name="description" content="نظام محاسبة احترافي ومتكامل لإدارة أعمالك بسهولة وكفاءة." />
     <meta name="keywords" content="محاسبة, ERP, إدارة, أعمال, فواتير, مالية, نظام, عربي" />
     <meta name="author" content="ERP90 Team" />
