Save changes before rebase

--- a/index.html
+++ b/index.html
@@ -58,3 +58,8 @@
   }
   </script>
 </head>
+<body style="font-family: 'Noto Kufi Arabic', 'Cairo', 'Tajawal', Arial, sans-serif; background: #f8fafc; margin: 0;">
+ <div id="root"></div> 
+ <script type="module" src="/src/main.tsx"></script> 
+</body>
+</html>
